--- a/main.tex
+++ b/main.tex
@@ -37,16 +37,77 @@
 
 \begin{document}
 
+
 %----------Heading-----------------
 
 \begin{tabular*}{\textwidth}{@{\hspace{5pt}}l@{\extracolsep{\fill}}r}
   \textbf{{\Huge Eva Sabeeh}}\\
   {} \\
   {Address:  ~~~Lucknow, Uttar Pradesh} & Email: \href{mailto:evasabeeh@gmail.com}{\emph{~~~~~~~~~\underline{evasabeeh@gmail.com}}}\\ [2pt]
-  {} & LinkedIn: \href{https://www.linkedin.com/in/eva-sabeeh/}{\emph{~~\underline{linkedin.com/eva-sabeeh}}} \\ [2pt]
-  {} & GitHub:  \href{https://www.github.com/evasabeeh/}{\emph{~~~~~~~\underline{github.com/evasabeeh}}}\\
+  {} & LinkedIn: \href{https://www.linkedin.com/in/eva-sabeeh/}{\emph{~~\underline{linkedin.com/in/eva-sabeeh}}} \\ [2pt]
+  {} & GitHub:  \href{https://www.github.com/evasabeeh/}{\emph{~~~~~~~~~\underline{github.com/evasabeeh}}}\\
 \end{tabular*}
+\vspace{1pt}
+
+
+%---Experience-----------
+
+\section{Experience}
 \vspace{2pt}
+\begin{itemize}[itemsep=1em, label=]
+  \item
+    \begin{tabular*}{0.95\textwidth}{@{\hspace{-2.2em}}l@{\extracolsep{\fill}}r}
+      \textbf{Web Development Intern, FruitRush} & \textit{Mar 2025 - Jun 2025} \\
+    \end{tabular*}
+    \vspace{-1.5em}
+    \begin{itemize}[label=\textbullet, labelsep=0.5em, left=-2em, itemsep=-0.2em]
+      \item \textcolor{black}{Redesigned and redeveloped the company's website from scratch, collaborating with the development team to improve efficiency and reduce code redundancy by 20\%}
+      \item \textcolor{black}{Implemented frontend development best practices, focusing on code optimization techniques and performance enhancements, leading to a 30\% improvement in site responsiveness}
+    \end{itemize}
+  \end{itemize}
+\vspace{1pt}
+
+
+%----------Projects--------------
+
+\section{Academic Projects}
+\vspace{5pt}
+\begin{itemize}[itemsep=0.5em, label=]
+  \item 
+  \begin{tabular*}{0.95\textwidth}{@{\hspace{-2.2em}}l@{\extracolsep{\fill}}r}
+    \textbf{Optimized Travel Route Planner} & \textit{C, C++, Data Structure and Algorithm}
+  \end{tabular*}
+  \vspace{-1.5em}
+  \begin{itemize}[label=\textbullet, labelsep=0.5em, left=-2em, itemsep=-0.2em]
+    \item \textcolor{black}{Implemented Dijkstra’s Algorithm to optimize flight path calculations, reducing bundle size by 10\%}
+    \item \textcolor{black}{Developed and optimized graph data structure to model and process connections for 100+ flight routes}
+    \item \textcolor{black}{Generated an HTML file to display routes based on user-defined preferences (cheapest or fastest)}
+  \end{itemize}
+
+  \item
+    \begin{tabular*}{0.95\textwidth}{@{\hspace{-2.2em}}l@{\extracolsep{\fill}}r}
+      \textbf{{\href{https://github.com/evasabeeh/Melofy/releases/tag/android-app} {\underline{Melofy - Spotify inspired app}}}} & \textit{Kotlin, Jetpack Compose, Material UI}
+    \end{tabular*}
+    \vspace{-1.5em}
+    \begin{itemize}[label=\textbullet, labelsep=0.5em, left=-2em, itemsep=-0.2em]
+      \item \textcolor{black}{Developed an Android playback application entirely in Kotlin, utilizing Jetpack Compose for a seamless, modern UI experience, achieving a 40\% faster UI rendering compared to traditional XML-based layouts}
+      \item \textcolor{black}{Leveraged ExoPlayer to integrate efficient media capabilities, supporting various media formats}
+      \item \textcolor{black}{Focused on user-centric UI development, implementing modern Google Material Design principles to create a visually appealing and intuitive interface}
+    \end{itemize}
+
+  \item
+    \begin{tabular*}{0.95\textwidth}{@{\hspace{-2.2em}}l@{\extracolsep{\fill}}r}
+      \textbf{{\href{https://fooddelivery-frontend-szy1.onrender.com/} {\underline{Online Food Ordering System}}}} & \textit{MERN (MongoDB, Express.js, React.js, Node.js)}
+    \end{tabular*}
+    \vspace{-1.5em}
+    \begin{itemize}[label=\textbullet, labelsep=0.5em, left=-2em, itemsep=-0.2em]
+      \item \textcolor{black}{Accelerated build times using Vite, streamlining client-side and admin panel development for a food platform with 15+ interactive components}
+      \item \textcolor{black}{Optimized API performance and deployed and managed the MERN application via Render, ensuring 90\% uptime}
+      \item \textcolor{black}{Implemented robust cart management, filtering capabilities, secure authentication with JWT, and client-side routing using React Router DOM for seamless navigation}
+    \end{itemize}
+\end{itemize}
+\vspace{2pt}
+
 
 
 %-----------Education-----------------
@@ -56,16 +117,16 @@
   \begin{itemize}[label=]
     \item
       \begin{tabular*}{0.95\textwidth}{@{\hspace{-2em}}l@{\extracolsep{\fill}}r}
-        \textbf{Chandigarh University, Mohali} & CGPA: \textbf{7.53} \\
+        \textbf{Chandigarh University, Mohali} & CGPA: \textbf{7.57} \\
         \textit{Bachelor of Engineering - Computer Science and Engineering} & \textit{Sept 2021 - Jun 2025} \\
       \end{tabular*}
-
+      \vspace{-0.5em}
     \item
       \begin{tabular*}{0.95\textwidth}{@{\hspace{-2em}}l@{\extracolsep{\fill}}r}
-        \textbf{Spring Dale College, Lucknow} & Percentage: \textbf{88.25} \\
+        \textbf{Spring Dale College, Lucknow} & Percentage: \textbf{86.40} \\
         \textit{Intermediate - CISCE} & \textit{Mar 2020 - Feb 2021} \\
       \end{tabular*}
-
+      \vspace{-0.5em}
     \item
       \begin{tabular*}{0.95\textwidth}{@{\hspace{-2em}}l@{\extracolsep{\fill}}r}
         \textbf{Spring Dale College, Lucknow} & Percentage: \textbf{91.40} \\
@@ -80,65 +141,12 @@
 \section{Skills Summary}
 \vspace{5pt}
 \begin{itemize}[label=\textbullet, labelsep=0.5em, left=0.5em, itemsep=-0.2em]
-  \item \textcolor{black}{\textbf{Programming Languages:}}{~~C++, Core Java, SQL, HTML, CSS, JavaScript}
-  \item \textcolor{black}{\textbf{Tools \& Libraries:}}{~~Jetpack Compose, Git, C++ STL, Bootstrap, Tailwind CSS, React.js}
-  \item \textcolor{black}{\textbf{Platforms:}}{~~~~~~~~~~~~~~GitHub, Figma, MySQL, Visual Studio Code, Android Studio}
-  \item \textcolor{black}{\textbf{Coursework:}}{~~~~~~~~~~~Data Structures \& Algorithms, Object Oriented Programming, Database Management System}
-  \item[] \textcolor{black}{~~~~~~~~~~~~~~~~~~~~~~~~~~~~~Operating System, Computer Networks}
-  \item \textcolor{black}{\textbf{Familiar With:}}{~~~~~~~Python, Kotlin}
-  \item \textcolor{black}{\textbf{Soft Skills:}}{~~~~~~~~~~~~~Active Learning, Emotional Intelligence, Task Management, Workability}
-\end{itemize}
-\vspace{2pt}
-
-
-%----------Projects--------------
-
-\section{Academic Projects}
-\vspace{5pt}
-\begin{itemize}[itemsep=1em, label=]
-  \item
-    \begin{tabular*}{0.95\textwidth}{@{\hspace{-2.2em}}l@{\extracolsep{\fill}}r}
-      \textbf{Optimized Travel Route Planner} & \textit{React.js, Tailwind CSS, JavaScript}
-    \end{tabular*}
-    \vspace{-1.5em}
-    \begin{itemize}[label=\textbullet, labelsep=0.5em, left=-2em, itemsep=-0.2em]
-      \item \textcolor{black}{Implemented Dijkstra’s Algorithm to determine the optimal flight between the origin and destination}
-      \item \textcolor{black}{Utilized graph data structures to model and efficiently process connections, taking the source and destination as input parameters, enabling route calculations for over 100+ flight paths}
-      \item \textcolor{black}{Returns an .html file  to display the calculated route based on user-defined preferences, such as the cheapest or fastest}
-    \end{itemize}
-  \item
-    \begin{tabular*}{0.95\textwidth}{@{\hspace{-2.2em}}l@{\extracolsep{\fill}}r}
-      \textbf{{\href{https://github.com/evasabeeh/Melofy/releases/tag/android-app} {\underline{Melofy - Spotify inspired app}}}} & \textit{HTML, CSS, JavaScript}
-    \end{tabular*}
-    \vspace{-1.5em}
-    \begin{itemize}[label=\textbullet, labelsep=0.5em, left=-2em, itemsep=-0.2em]
-      \item \textcolor{black}{Developed an Android playback application entirely in Kotlin, utilizing Jetpack Compose for a seamless, modern UI experience, achieving a 40\% faster UI rendering compared to traditional XML-based layouts}
-      \item \textcolor{black}{Leveraged ExoPlayer to integrate efficient and high-performance media capabilities, supporting various media formats}
-      \item \textcolor{black}{Focused on user-centric UI development, implementing modern Google Material Design principles to create a visually appealing and intuitive interface}
-    \end{itemize}
-  \item
-    \begin{tabular*}{0.95\textwidth}{@{\hspace{-2.2em}}l@{\extracolsep{\fill}}r}
-      \textbf{{\href{https://fooddelivery-frontend-szy1.onrender.com/} {\underline{Online Food Ordering System}}}} & \textit{Vite+React, Tailwind CSS, Node.js, MongoDB}
-    \end{tabular*}
-    \vspace{-1.5em}
-    \begin{itemize}[label=\textbullet, labelsep=0.5em, left=-2em, itemsep=-0.2em]
-      \item \textcolor{black}{Utilized Vite as a modern build tool to efficiently develop both the client-side and admin panel frontends with 15+ components for a comprehensive food platform, resulting in a 30\% reduction in build time}
-      \item \textcolor{black}{Optimized API performance, while deployed and managed the MERN application via Render, with a 90\% uptime}
-      \item \textcolor{black}{Implemented a robust cart management functionality, filter capabilities, and client-side routing with React Router DOM for managing seamless navigation within the application}
-    \end{itemize}
-\end{itemize}
-\vspace{2pt}
-
-
-%-----------Certifications-----------
-
-\section{Certifications}
-\vspace{5pt}
-\begin{itemize}[label=\textbullet, labelsep=0.5em, left=0.5em, itemsep=-0.2em]
-  \item \textcolor{black}{\textbf{Introduction to Programming through C++}, Swayam \& NPTEL}
-  \item \textcolor{black}{\textbf{Front-End Web UI Frameworks and Tools: Bootstrap 4}, Coursera}
-  \item \textcolor{black}{\textbf{Create the User Interface in Android Studio}, Coursera}
-  \item \textcolor{black}{\textbf{Core Java} Specialization, Coursera}
+  \item \textcolor{black}{\textbf{Languages:}}{\small{{~~C++, Core Java, SQL, HTML, CSS, JavaScript}}}
+  \item \textcolor{black}{\textbf{Tools \& Libraries:}}{\small{{~~Jetpack Compose, Git, C++ STL, Bootstrap, Sass, Tailwind CSS, React.js}}}
+  \item \textcolor{black}{\textbf{Platforms:}}{\small{{~~GitHub, Figma, MySQL, MongoDB Atlas, Postman, Visual Studio Code, Android Studio}}}
+  \item \textcolor{black}{\textbf{Coursework:}}{\small{{~~Data Structures and Algorithms, Object Oriented Programming, Operating System, Computer Networks, Database Management System (Relational Databases)}}}
+  \item \textcolor{black}{\textbf{Others:}}{\small{{~~RESTful APIs, Responsive Web design}}}
+  \item \textcolor{black}{\textbf{Soft Skills:}}{\small{{~~Active Learning, Emotional Intelligence, Task Management, Workability}}}
 \end{itemize}
 \vspace{2pt}
 
@@ -146,12 +154,13 @@
 %------Achievements-----
 
 \section{Activities \& Achievements}
-\vspace{5pt}
+\vspace{2pt}
 \begin{itemize}[label=\textbullet, labelsep=0.5em, left=0.5em, itemsep=-0.2em]
-  \item \textcolor{black}{Solved 500+ problems on {\href{https://www.leetcode.com/evasabeeh/} {\underline{LeetCode}}}, leveraged knowledge in Data Structures and Algorithms}
+  \item \textcolor{black}{Solved 500+ problems on {\href{https://www.leetcode.com/evasabeeh/} {\underline{LeetCode}}} with \textbf{1500+} rating in programming contests}
+  \item \textcolor{black}{Certified in \textbf{Introduction to Programming through C++} by Swayam \& NPTEL}
+  \item \textcolor{black}{Achieved \textbf{Front End Development Libraries} certification, completing 300+ hours of coursework and demonstrating
+  proficiency in essential frontend technologies, libraries and skills}
   \item \textcolor{black}{Led initiatives as a Student Council member, 2017 - 2018}
 \end{itemize}
 
-
 \end{document}
-
